[gd_scene load_steps=2 format=3 uid="uid://l5m6lq5yl8kk"]

[ext_resource type="Script" uid="uid://kt0otvme4vm8" path="res://Scenes/image_item.gd" id="1_bktcv"]

[node name="ImageItem" type="Node2D"]
script = ExtResource("1_bktcv")

[node name="TextureRectBase" type="TextureRect" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 232.0
offset_bottom = 232.0

[node name="TextureRectColour1" type="TextureRect" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 232.0
offset_bottom = 232.0

[node name="TextureRectColour2" type="TextureRect" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 232.0
offset_bottom = 232.0
